<resources>
    <string name="app_name">Amity Placement\nApp</string>
    <string name="default_notification_channel_id">12123</string>
    <string name="okay">Okay</string>
    <string name="sure">Sure</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="alert">Alert</string>
    <string name="amity">Amity</string>
    <string name="trending">Trending</string>
    <string name="search">Search</string>
    <string name="companies">Companies</string>
    <string name="profile">Profile</string>
    <string name="jobs">Jobs</string>
    <string name="double_back_to_exit">Please click BACK again to exit</string>
    <string name="category">Category</string>
    <string name="skill">Skill</string>
    <string name="qualification">Qualification</string>
    <string name="username">@string/pls_enter_mobile_no</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="pls_enter_mobile_no">Please enter your registered phone no</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="pls_enter_otp">Please enter OTP</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout_message">Do you want to logout ?</string>
    <string name="recent_jobs">Recent Jobs</string>
    <string name="logout">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_no">Contact Number (10 digit)</string>
    <string name="email_id">Email Id</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="working_experience">Working Experience (if any)</string>
    <string name="hm_experience">How many experience do you have ?</string>
    <string name="last_company">Last Company</string>
    <string name="last_designation">Last Designation</string>
    <string name="accept_t_c">I accept all terms and conditions.</string>
    <string name="authenticating">Authenticating</string>
    <string name="logged_in">Logged In</string>
    <string name="sending">Sending</string>
    <string name="err_password_not_matched">Password Not Matched</string>
    <string name="err_field_is_empty">Required Field Is Empty</string>
    <string name="loading">Loading</string>
    <string name="password_changed">Password Changed</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="otp_sent">OTP Sent</string>
    <string name="education">Education</string>
    <string name="add_highschool">Add High School</string>
    <string name="add_intermediate">Add Intermediate</string>
    <string name="add_graduation">Add Graduation</string>
    <string name="add_post_graduation">Add Post Graduation</string>
    <string name="err_field_is_not_valid">Field is Not Valid</string>
    <string name="password_6">Password (min 6 digit)</string>
    <string name="highschool">Highschool</string>
    <string name="intermediate">Intermediate</string>
    <string name="graduation">Graduation</string>
    <string name="post_graduation">Post Graduation</string>
    <string name="board">Board/University</string>
    <string name="school">School/College</string>
    <string name="stream">Stream</string>
    <string name="pcm">PCM Marks (%)</string>
    <string name="pcb">PCB Marks (%)</string>
    <string name="grade">Class/Division/Grade</string>
    <string name="avg">Average Marks (%)</string>
    <string name="add">Add</string>
    <string name="NA">NA</string>
    <string name="select_passing_year">Please Select Passing Year</string>
    <string name="passing_year">Passing Year</string>
    <string name="registered">Registered</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="updated">Updated</string>
    <string name="general_details">General Details</string>
    <string name="add_working_exp">Add Working Experience</string>
    <string name="update_contact">Change Contact</string>
    <string name="change_email">Change Email Id</string>
    <string name="result">Result</string>
    <string name="pursuing">Pursuing</string>
    <string name="unable_to_update">Unable to update</string>
    <string name="pls_enter_pcm_pcb">Please Enter PCM or PCB Marks</string>
    <string name="refresh">Refresh</string>
    <string name="downloading">Downloading</string>
    <string name="app_not_found">No application found to open this document.</string>
    <string name="program_category">Program Category</string>
    <string name="program">Program</string>
    <string name="err_select_category">Please Select Category</string>
    <string name="see_job">See Job</string>

    <!--arrays-->
    <string-array name="category">
        <item>Select</item>
        <item>Non Technical</item>
        <item>Technical</item>
    </string-array>
    <string-array name="program">

    </string-array>
    <string-array name="qualification">

    </string-array>
    <string-array name="year">
        <item>Select Year Of Passing</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>

</resources>
