<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_recents"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/jobs"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_companies"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/companies"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_contact"
        android:enabled="true"
        android:icon="@android:drawable/sym_contact_card"
        android:title="@string/contact_us"
        app:showAsAction="ifRoom" />
</menu>