<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/ten_dp"
    tools:context=".modules.login.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_dp"
        android:contentDescription="@string/amity"
        android:src="@drawable/logo_amity" />


    <EditText
        android:id="@+id/et_username"
        style="@style/DarkTextAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_dp"
        android:maxLength="10"
        android:background="@drawable/edit_text"
        android:hint="@string/username"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_password"
        style="@style/DarkTextAppearanceMedium"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:background="@drawable/edit_text"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/b_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:background="@drawable/button_selector"
        android:text="@string/login" />

    <Button
        android:id="@+id/b_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:background="@drawable/fpt_button_selector"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/tv_forgot_password"
        style="@style/DarkTextAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/ten_dp"
        android:background="@drawable/default_button_selector"
        android:clickable="true"
        android:padding="@dimen/five_dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorGrey" />


</LinearLayout>
