<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_change_password"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/change_password"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>