<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/ten_dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kepler.studentportal.modules.profile.UpdateDetails">

    <EditText
        android:id="@+id/et_contact"
        style="@style/DarkTextAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:background="@drawable/edit_text"
        android:hint="@string/contact_no"
        android:inputType="phone"
        android:lines="1"
        android:maxLength="10" />


    <EditText
        android:id="@+id/et_email"
        style="@style/DarkTextAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:background="@drawable/edit_text"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:lines="1" />



    <Button
        android:id="@+id/b_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_dp"
        android:background="@drawable/button_selector"
        android:text="@string/update" />

</LinearLayout>
