<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/ten_dp"
    android:gravity="top"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:background="@drawable/edit_text">

        <EditText
            android:id="@+id/et_password"
            style="@style/DarkTextAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_6"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:background="@drawable/edit_text">

        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/DarkTextAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/b_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_dp"
        android:background="@drawable/button_selector"
        android:text="@string/change_password" />
</LinearLayout>